# amVK

./: .gitignore  .gitmodules  6MonthsIntoVulkan.md  CMakeLists.txt  README.md  SwapchainBENCH.txt  _ShaderDocs.md  aVSCodeExtension.md  amVK.cpp  amVK.hh  amVK_CMD.hh  amVK_CX.cpp  amVK_CX.hh  amVK_Common.hh  amVK_Defines.hh  amVK_Descriptors.hh  amVK_Device.cpp  amVK_Device.hh  amVK_IN.hh  amVK_INK.hh  amVK_ImgMemBuf.cpp  amVK_ImgMemBuf.hh  amVK_ImgMemBufMK2.hh  amVK_ImgNBuf.hh  amVK_Instance.hh  amVK_Logger.hh  amVK_Pipeline.cpp  amVK_Pipeline.hh  amVK_RenderPass.cpp  amVK_RenderPass.hh  amVK_RendererT1.hh  amVK_Sync.hh  amVK_Types.cpp  amVK_Types.hh  amVK_Utils.hh  amVK_WI.cpp  amVK_WI.hh  make.py  notesSoFar.md  premake5.lua  (+1 more)
.readme/: 6MonthsIntoVulkan.md  aVSCodeExtension.md  amVK.md  amVK_MemNBuf.md  amVK_Memory.md  amVK_Pipeline.md  amVK_RenderPass.md  amVK_SyncV2.md  amVK_V2.md  amVK_WI.md  notesSoFar.md
WIP_UTILS_amHT/: amHT.hh
build_files/: glslang_CMakeLists.cmake  preBuild_glslang.py
include/: Enzo_Fernandez.hh  amVK_CMD.hh  amVK_Descriptors.hh  amVK_ImgNBuf.hh  amVK_Sync.hh  amVK_Types.hh
intern/: amVK_CX.cpp  amVK_Defines.hh  amVK_Device.cpp  amVK_IMPLs.cpp  amVK_IN.hh  amVK_INK.hh  amVK_Instance.cpp  amVK_Logger.hh  amVK_LoggerEXT.hh  amVK_Memory.hh  amVK_Pipeline.cpp  amVK_RenderPass.cpp  amVK_RendererT1.hh  amVK_Types.cpp  amVK_Types.hh  amVK_Utils.cpp  amVK_Utils.hh  amVK_WI.cpp
intern/WIP_UTILS_amHT/: amHT.cpp
